[package]
name = "harvests_of_war"
version = "0.1.0"
publish = false
authors = ["Seurimas <@seurimas@compound.social>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]
js = ["bevy_wasm_scripting/js", "wasmer/js-default"]
non-js = ["bevy_wasm_scripting/non-js", "wasmer/sys-default"]

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_kira_audio = { version = "0.13", features = ["mp3"]}
bevy_asset_loader = { version = "0.14", features = ["2d"] }
rand = { version = "0.8.3" }
bevy_wasm_scripting = { path = "../bevy_wasmer_scripting", default-features = false }
wasmer = { version = "3", features = ["wat", "std"], default-features = false }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.27", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
